Deprecate Engineering Allocation Sync Meeting

--- a/infrastructure/team/scalability/projections.html.md.erb
+++ b/infrastructure/team/scalability/projections.html.md.erb
@@ -68,7 +68,7 @@ The triage duties are:
 1. Review all capacity planning issues that are past their due date, or in the Open column (which means they do not have a `capacity-planning::` workflow label). The [saturation labels](/handbook/engineering/infrastructure/capacity-planning/#saturation-labels) can help in choosing which issues to review first, if there are many with the same due date.
 1. For each item, check if the warning still applies and follow up with the DRI or other engineers for an updated status.
 1. Set appropriate due dates for the next review.
-1. Raise any significant concerns through the Engineering Allocation meeting (currently on Tuesdays in UTC afternoon) by adding them to the [meeting agenda](https://docs.google.com/document/d/1Zk3qgbn8iDyJRq0i5C5LPBgEopY6o1tpYEKfdNfA9Bg/edit#). If something is really pressing, please verbalize or find someone in the team to do it.
+1. Raise any significant concerns with the Engineering Manager who will escalate to leadership as appropriate. 
 1. Check that Tamland is running and generating output and bring this to the team's attention if it is not running. Check the [scheduled pipelines on ops](https://ops.gitlab.net/gitlab-com/gl-infra/tamland/-/pipelines?page=1&scope=all&source=schedule) for this. There should be a daily job populating the cache, and a weekly job for tamland without failures.
 
 When your rotation is finished, you need to provide handover notes in the #infra_capacity-planning channel for the incoming person. 
