Update monthly chores to May

--- a/product/ux/technical-writing/index.html.md.erb
+++ b/product/ux/technical-writing/index.html.md.erb
@@ -345,6 +345,8 @@ Schedule for Docs project maintenance tasks:
 - January, 2023: [Phillip Wells]
 - February, 2023: [Jon Glassman]
 - March, 2023: [Marcin Sędłak-Jakubowski]
+- April, 2023: [Lorena Ciutacu]
+- May, 2023: [Ashraf Khamis]
 
 ## Reviews
 
