Add Foundations Onboarding checklist to team page

--- a/development/dev/manage/foundations/index.html.md.erb
+++ b/development/dev/manage/foundations/index.html.md.erb
@@ -107,3 +107,7 @@ Here are some resources team members can use for employee development:
 ## Metrics
 
 <%= partial "handbook/engineering/metrics/partials/_cross_functional_dashboard.erb", locals: { filter_value: "Foundations" } %>
+
+## Team onboarding
+
+- [UX Onboarding Checklist](/handbook/engineering/development/dev/manage/foundations/ux-foundations-onboarding)
