Add Update template to handbook

--- a/development/fulfillment/purchase/index.html.md.erb
+++ b/development/fulfillment/purchase/index.html.md.erb
@@ -34,6 +34,28 @@ The team meets synchronously once per week alternating timezones between EMEA an
 ### Weekly update
 The Engineering Manager provides a weekly update on the team progress toward the milestone objectives. This should include the weight closed relative to the weight of the entire milestone. This update is added as a comment to the milestone planning issue prior to the weekly team meeting. In case the Engineering Manager is unavailable to provide the weekly update, an alternate team member will be assigned via the #s_fulfillment Slack channel.
 
+#### Update template
+
+```
+### DD.MM X weeks into Milestone
+
+* ~frontend X issues open, Y weights
+   * <Please provide only small updates on what issue is being worked on, the addition of any unplanned issues, etc>
+* ~backend X issues open, Y weights
+   * <Please provide only small updates on what issue is being worked on, the addition of any unplanned issues, etc>
+---
+* ~frontend X issues closed, Y weights
+   * <Please add important updates on what have been closed, honorary mention>
+* ~backend X issues closed, Y weights
+   * <Please add important updates on what have been closed, honorary mention>
+
+---
+
+**Updates**
+   * <Updates which affect the Purchase team, ex- Welcome a new member>
+   * <Special shoutout to team member/s for their achievements>
+```
+
 ### Issue boards
 
 We have two issue boards that we actively work from:
