Clarify Verify developer onboarding buddy's role

--- a/development/ops/verify/index.html.md.erb
+++ b/development/ops/verify/index.html.md.erb
@@ -84,9 +84,15 @@ Issues labelled with `~onboarding` are smaller issues to help you get onboarded 
 
 In May 2021, we introduced the [CI Shadow Program](https://gitlab.com/gitlab-com/Product/-/issues/2542), which we are trialing as a way to onboard existing GitLab team members from other Engineering teams to the CI domain and contribute to CI features.
 
-#### Onboarding by Reviewing Merge Requests
+#### Onboarding Buddies
 
-In addition to helping new hires through any issues with their set up or assigned tasks, it's recommended that onboarding buddies add them as a reviewer on any MRs they're being asked to review. This further builds their CI knowledge and allows for CI domain expertise to be shared amongst all engineers in Verify.  Similar to our [trainee maintainership and reviewer mentorship programs](https://about.gitlab.com/handbook/engineering/workflow/code-review/#reviewer-mentorship-program), onboarding buddies can re-assign MRs to their onboarding team member to review, and then provide them with direct feedback on their MR review afterwards.
+Onboarding buddies are assigned to new hires to ensure their first few months of onboarding go smoothly. It's recommended that onboarding buddies set up weekly check-ins, whether that's async (such as a Slack DM) or sync (such as recurring coffee chats).
+
+**Reviewing Merge Requests**
+
+In addition to helping those _new hire/transfer_ through any issues with their set up or assigned tasks, it's recommended that their onboarding buddies add the _new hire/transfer_ as an additional reviewer on any MRs the onboarding buddy has been requested to review. Ideally this takes place after they've been working in Verify for at least 3 months, and as mutually agreed upon between both parties. This step further builds the _new hire/transfer's_ CI knowledge and allows for CI domain expertise to be shared amongst all engineers in Verify. 
+
+Similar to our [reviewer mentorship programs](https://about.gitlab.com/handbook/engineering/workflow/code-review/#reviewer-mentorship-program), the _new hire/transfer_ will review the merge request as if they're being asked to perform the code review. Once complete, they'll assign the MR back to their onboarding buddy.  It is expected that the onboarding buddy will also complete the code review, then provide the _new hire/transfer_ feedback about their code review. Ideally this takes place at their next check-in, where notes are captured in a shared Google Doc or a GitLab issue for ease-of-collaboration.
 
 ### API development
 
