Move staff engineer page to general dev

--- a/development/dev/training/staff-engineers/index.html.md.erb
+++ b/development/dev/training/staff-engineers/index.html.md.erb
@@ -1,6 +1,6 @@
 ---
 layout: handbook-page-toc
-title: Manage Stage - Staff Engineers
+title: Staff Engineers
 ---
 
 ## On this page
@@ -9,7 +9,7 @@ title: Manage Stage - Staff Engineers
 - TOC
 {:toc .hidden-md .hidden-lg}
 
-## Manage - Staff Engineers
+## Staff Engineers
 
 
 **You became a Staff Engineer! Now what?**
@@ -19,7 +19,7 @@ This is an amazing accomplishment! Staff promotions are difficult to achieve bec
 ### Changes to expect in your new role
 
 One difference between Staff and Senior positions is the leadership aspect that Staff engineers must exhibit and grow into. Leadership is not for everyone, so it makes sense that many senior engineers would prefer to stay in their positions long-term. As you transition more fully into your new Staff role, you will:
-- Shift your technical prowess from hands-on to hands-off by guiding, coaching, aligning, and organizing others. You will work on the most needed, critical, or complex topics within your group and be depended on to save the group when they are struggling, but otherwise you will work to empower others to take your place on the topics you were covering as a strong senior. 
+- Shift your technical prowess from hands-on to hands-off by guiding, coaching, aligning, and organizing others. You will work on the most needed, critical, or complex topics within your group and be depended on to save the group when they are struggling, but otherwise you will work to empower others to take your place on the topics you were covering as a strong senior.
 - Be doing a lot of context switching - it’s difficult to help people and “get your job done” at the same time. Remember, it is now your job as a leader to help people too! Context switching and time management are skills that leaders can struggle with.
 - Be an example to others - in your responses (disagreements or agreements), proposals, and in the way you work or further yourself, keep in mind that others may be referring to you when they think about how they should handle a situation.
 - Practice peer accountability by holding others accountable to their commitments and guiding them toward improvement areas
@@ -34,7 +34,7 @@ Another difference is the gap between Staff and Principal - a Staff engineer is 
 
 ### Tactical initiatives for a Staff engineer
 
-- Becoming a maintainer of more projects, specialites, or technologies
+- Becoming a maintainer of more projects, specialties, or technologies
 - Become an owner of the triage report, assessing the severity of incoming issues and advocating for the priority they should take
 - Begin formally mentoring 1-2 others in their own careers
 - Being a backup for your manager, and working directly with counterparts on direction and vision
@@ -47,7 +47,7 @@ Another difference is the gap between Staff and Principal - a Staff engineer is 
 - Represent your group to leadership by speaking to engineering allocation status, reliability standup topics, iteration office hours, etc
 - Conducting behavioral and technical interviews, or other hiring topics (filtering candidates, recommending ways to decrease bias or increase diversity)
 - Becoming a reviewer mentor
-- Conducting RCA’s or Iteration Retrospectives
+- Conducting RCAs or Iteration Retrospectives
 - Collaborate directly with customers by participating in technical discussions to understand use-cases or troubleshooting
 - Collaborating with security on threat modeling for your area, infrastructure on production readiness initiatives, product on long-term implementation strategies, other teams on integrations and delivery
 - Documenting best practices for your group, stage, sub-department, or department
