Support handbook SWIR section: add info about Tags/labels and Manager Attention label specifically

--- a/support/index.html.md.erb
+++ b/support/index.html.md.erb
@@ -462,7 +462,11 @@ Any workflow changes or announcements should be shared in the SWIR and we recomm
 - You can subscribe to this label to be notified when the latest SWIR has been generated.  
 - For audio editions recorded after 2022/07/01, you can find a link to the audio edition of the SWIR within the respective issue (this is so we comply with the [SAFE framework](https://about.gitlab.com/handbook/legal/safe-framework/). An archive of all audio editions can be found in the [Support Week in Review - Audio Edition folder](https://drive.google.com/drive/search?q=support%20week%20in%20review%20-%20audio%20edition) on Google Drive (internal only).
 
-We encourage anyone in the team to share. We currently have the following topics:
+We encourage anyone in the team to share. 
+
+#### SWIR Topics 
+
+We currently have the following topics, each in its own section in the SWIR:
 
 - **Actionable**. For items that require a decision to be made or action to be taken (such as, asking for feedback on an issue).
 - **Things to know about**. Share items that you would like to share with the team, like projects you're working on, known bugs, new workflows, cool articles you found, etc.
@@ -473,9 +477,13 @@ We encourage anyone in the team to share. We currently have the following topics
    -**SSAT**. A selection of the positive SSAT feedback received from customers during the week
 - **Metrics report**. Review the support metrics for the span of the week.
 
+#### SWIR Labels
 
-You can read about how we got this started
-[in this issue](https://gitlab.com/gitlab-com/support/support-team-meta/issues/1394).
+SWIR Issues can also have their own Tags or Labels in the GitLab project. These are used to highlight specific Areas of Focus (L&R, SaaS...). Labels are used on the Issues only, they do not appear in the digest Issue nor in the Google doc. 
+
+One label, `Manager Attention`, is used for policy changes or other topics of which Support Managers should specifically be made aware. You can find the `Manager Attention` label here and subscribe to it: https://gitlab.com/gitlab-com/support/readiness/support-week-in-review/-/labels?search=manager+attention 
+
+You can read about the origins of the auto-generated SWIR [in this issue](https://gitlab.com/gitlab-com/support/support-team-meta/issues/1394).
 
 ### Cross-Department Roles
 
