Board dinner attendees should have bios sent 3 business days in advance

--- a/board-meetings/index.html.md.erb
+++ b/board-meetings/index.html.md.erb
@@ -253,7 +253,7 @@ The CEO is responsible for submitting a memo to the BoD in advance of the Board 
 
 ### Board Dinner
 
-We usually have a Board Dinner on the evening before a Board Meeting. The EBA to the CEO is responsible for coordinating this dinner. Board Members, Local E-Group members, and the CoS to the CEO are all optional attendees. 
+We usually have a Board Dinner on the evening before a Board Meeting. The EBA to the CEO is responsible for coordinating this dinner. Board Members, Local E-Group members, and the CoS to the CEO are all optional attendees. Bios for attendees of the Board Dinner should be sent by the EBA to the CEO 3 business days in advance of the Board Dinner.
 
 Each quarter, [E-Group](https://about.gitlab.com/company/team/structure/#e-group) can choose to invite an additional team member as a Key Talent Guest. If this is desired in a specific quarter, at least a month before the dinner, the CoS to the CEO will gather nominations and ensure that E-Group has identified an invitee. Criteria for consideration includes:
 
@@ -273,7 +273,7 @@ As part of joining the dinner, the Key Talent Guest should come prepared to disc
 1. What they have accomplished thus far at GitLab
 1. What their plans are both now and in the future and what they see as a future for themselves at GitLab
 
-Though no formal presentation is required, the Key Talent Guest should advise on how they want to discuss these topics with the Board and E-Group and coordinate with the EBA to the CEO. The CEO to the EBA will ensure that the Key Talent Guest has dedicated time at the dinner.
+Though no formal presentation is required, the Key Talent Guest should advise on how they want to discuss these topics with the Board and E-Group and coordinate with the EBA to the CEO. The EBA to the CEO will ensure that the Key Talent Guest has dedicated time at the dinner.
 
 #### Key Talent Board Dinner Guests
 
