Fix broken internal links

--- a/security/index.html.md.erb
+++ b/security/index.html.md.erb
@@ -70,7 +70,7 @@ If you have a question or concern and need to speak with the Security Team, you 
   and use this as
   your primary means for accessing Applications supported in Okta. As part of
   setting up Okta, you'll need to establish a [strong
-  password](handbook/security/index.html#gitlab-password-guidelines)
+  password](/handbook/security/index.html#gitlab-password-guidelines)
   and set up at least one additional form of authentication.
 1. For your Okta password and other passwords that you won't store in Okta, set up [1Password] as your password manager and set a **strong and unique**
   master password.
