Update username for Alan Paruszewski

--- a/development/sec/index.html.md.erb
+++ b/development/sec/index.html.md.erb
@@ -209,7 +209,7 @@ GitLab’s Stance for Architectural issues: https://about.gitlab.com/handbook/en
 | Team                                                     | Representative                                                                   |
 |----------------------------------------------------------|----------------------------------------------------------------------------------|
 | [Composition Analysis](secure/composition-analysis/)     | <%= link_to_team_member('fcatteau') %>                                           |
-| [Security Policies](govern/security-policies/)           | <%= link_to_team_member('mparuszewski') %>                                       |
+| [Security Policies](govern/security-policies/)           | <%= link_to_team_member('alan') %>.                                              |
 | [Dynamic Analysis](secure/dynamic-analysis/)             | <%= link_to_team_member('cam_swords') %>                                         |
 | [Static Analysis](secure/static-analysis/)               | <%= link_to_team_member('theoretick') %>                                         |
 | [Threat Insights](govern/threat-insights/) BE            | <%= link_to_team_member('minac') %>                                              |
