Update Purchase links in focus areas section

--- a/development/fulfillment/index.html.md.erb
+++ b/development/fulfillment/index.html.md.erb
@@ -21,7 +21,7 @@ Fulfillment focuses on improving our capabilities and metrics in the following a
 * Fulfillment: [Direction](https://about.gitlab.com/direction/fulfillment), [Group Responsibilities](https://about.gitlab.com/direction/fulfillment/#group-responsibilities), [Fulfillment Development Team](/handbook/engineering/development/fulfillment/)
 * Fulfillment Platform: [Team](/handbook/engineering/development/fulfillment/fulfillment-platform/)
 * Provision: [Direction](https://about.gitlab.com/direction/fulfillment#provision), [Team](/handbook/engineering/development/fulfillment/provision/)
-* Purchase: [Backend Team](/handbook/engineering/development/fulfillment/purchase/)
+* Purchase: [Direction](https://about.gitlab.com/direction/fulfillment/purchase/), [Team](/handbook/engineering/development/fulfillment/purchase/)
 * Utilization: [Team](/handbook/engineering/development/fulfillment/utilization/)
 
 ## Direction
