--- a/infrastructure/team/reliability/observability.html.md.erb
+++ b/infrastructure/team/reliability/observability.html.md.erb
@@ -49,6 +49,7 @@ focus as of early 2023 is for GitLab.com, but in the long run, we would like to 
 * [Sentry](https://sentry.gitlab.net)
 * Pingdom
 * Dead Mans Snitch
+* [Status.io](https://about.gitlab.com/handbook/support/workflows/cmoc_workflows.html#about-statusio) - overlap with Support
 
 
 ## Overlap
@@ -59,6 +60,7 @@ focus as of early 2023 is for GitLab.com, but in the long run, we would like to 
 2.  With the Reliability:Foundations team to use the underlying platforms (GKE) they provide
 3.  With [Observability Group](/handbook/product/categories/#observability-group) for dogfooding overlaps and feedback for Infra team needs
 4.  With data team on Sisense dashboards.
+5.  With Support for ownership of tooling for CMOC duties like Status.io
 
 
 
