Update Utilization page section with. new OKRs information

--- a/development/fulfillment/utilization/index.html.md.erb
+++ b/development/fulfillment/utilization/index.html.md.erb
@@ -78,10 +78,10 @@ The Engineering Manager will report before the end of each week on milestone pro
 
 ##### OKRs
 
-The Engineering Manager will report on the progress of [OKRs](/company/okrs/) every two weeks as a comment in relevant issues and in the Ally reporting tool.
+The Engineering Manager will report on the progress of [OKRs](/company/okrs/) every two weeks as a comment in relevant work items found in the [Objectives and Key Results project](https://gitlab.com/gitlab-com/gitlab-OKRs).
 
-- Current OKRs: [FY23 Q4 Summary](https://gitlab.com/gitlab-org/fulfillment-meta/-/issues/805)
-- Tracking in [Ally.io](https://app.ally.io/teams/41113/objectives?tab=0&chartView=false&time_period_id=155987)
+Current OKRs: [Work Items Labeled with Utilization](https://gitlab.com/gitlab-com/gitlab-OKRs/-/issues/?sort=created_date&state=opened&label_name%5B%5D=group%3A%3Autilization&first_page_size=100)
+
 
 ### Taking Time Off (PTO)
 
