--- a/product/product-leadership/index.html.md.erb
+++ b/product/product-leadership/index.html.md.erb
@@ -61,7 +61,7 @@ The VP and Product Operations will be assigned an [automatated issue](https://gi
 | 2022-12-14 | Omar Fernandez | [Issue 5164](https://gitlab.com/gitlab-com/Product/-/issues/5164) |
 | 2023-01-17 | Sarah Waldner (Dev) | [Issue 5268](https://gitlab.com/gitlab-com/Product/-/issues/5268) | 
 | 2023-02-28 | Jackie Porter (Ops) | TBD |
-| 2023-03-22 | Hillary Benson (Sec) | TBD |
+| 2023-03-22 | Hillary Benson (Sec) | [Issue 5501](https://gitlab.com/gitlab-com/Product/-/issues/5501) |
 | 2023-04-13 | Joshua Lambert (Enablement) | TBD |
 | 2023-05-23 | Justin Farris (Product Monetization) | TBD |
 | 2023-06-20 | Orit Golowinski (Dev) | TBD |
