Add Frontend Planning Meeting Docs to SAST page

--- a/development/sec/secure/static-analysis/index.html.md.erb
+++ b/development/sec/secure/static-analysis/index.html.md.erb
@@ -137,6 +137,16 @@ For instance, the Product Manager should be part of any decision to reorder prio
 - Engineering Manager will pull all issues on the epics prioritized into the `~workflow::planning breakdown` state.
   - This action should make the issues available on **Static Analysis Delivery Board** mentioned above.
 
+#### Frontend Planning Meeting
+
+The Frontend Planning meeting is a crucial planning session that takes place during the last quarter of a milestone. It has a heavy focus on Frontend-related issues because they often have many dependencies from other trades.
+
+The purpose of this meeting is to lay out expectations and goals for the milestone that comes **after** the upcoming milestone, as well as to identify any potential blockers that may arise. By doing so, the team can proactively address any workflow dependencies and stay on top of them.
+
+The goals and blockers for the milestone after the upcoming one are then documented in the planning issue of the upcoming milestone.
+
+By holding regular Frontend Planning meetings, the team can ensure that all Frontend-related issues are identified and addressed proactively, which can help to prevent delays  by making sure things are ready to be picked up as planned.
+
 ### MoSCoW Process
 
 The team aims for a regular cadence of backlog refinement with minimal overhead. One of the approaches we use to eliminate stale issues
