Add tips for collaborating on UI text

--- a/product/ux/product-designer/index.html.md.erb
+++ b/product/ux/product-designer/index.html.md.erb
@@ -294,12 +294,14 @@ Deciding who to include in a design review, whether an informal share or a reque
 
 ### Partnering with Technical Writers
 
-Any additions or changes to UI text require review by the group's Technical Writer, though you may have already discussed plans and ideas during the Product [Design phase](/handbook/product-development-flow/#validation-phase-3-design).
+Any additions or changes to UI text require review by the group's Technical Writer. You should discuss plans and ideas during the Product [Design phase](/handbook/product-development-flow/#validation-phase-3-design).
 UI text includes button or menu labels, error messages in the UI or in log files, user-assistance microcopy, notification emails, and any other text that may be surfaced in the UI.
 
 - Ensure the issue and MR have the [UI text](https://gitlab.com/gitlab-org/gitlab/-/issues?label_name%5B%5D=UI+text) label.
 - If changes to UI text could result in changes to documentation steps, add the `documentation` label. Documentation changes resulting from UI text changes follow the [Documentation for a product change](/handbook/product/ux/technical-writing/workflow/#documentation-for-a-product-change) workflow.
-- Message the [Technical Writer for the group](/handbook/product/ux/technical-writing/#designated-technical-writers) in the MR to request a review, including any specific files or lines they should review, and how to preview or understand the location/context of the text from the user's perspective.
+- Message the [Technical Writer for the group](/handbook/product/ux/technical-writing/#designated-technical-writers) in the design issue to request a review, including any specific files or lines they should review, and how to preview or understand the location/context of the text from the user's perspective. You can also message the writer in the MR to perform a final check of the agreed text.
+- Finalizing the UI text should be a collaboration between the Product Designer and the Technical Writer to produce the best possible usable and accurate text-based solution.
+- Often team members from Product, Marketing, Legal or other departments will have their own requirements for UI copy. To reduce back-and-forth revisions and design-by-committee, the Product Designer is recommended to ask these team members to provide the goals for what the text needs to communicate, rather than ideas for the text itself. 
 
 #### Collaborating on in-product reference information
 
