Update team functions at top level of data team page

--- a/business-technology/data-team/index.html.md.erb
+++ b/business-technology/data-team/index.html.md.erb
@@ -86,9 +86,9 @@ classDiagram
     Data : +Data Scientist
 ```
 
-### Data Fusion Teams
+### Analytics Engineering Team
 
-To support stable business workflows and longer-term initiatives, the Data Team has deployed three sub-teams, or **Data Fusion Teams**. A single Data Fusion Team includes members from Division leadership, Function Analysts, and the Data Team. Data Fusion Teams collaborate towards development of data solutions, including Dashboards, Data Models, Data Pipelines, Data Pumps, and ad-hoc analysis. Data Fusion Teams are staffed with the appropriate set of team members required to develop a full data solution. The Data Fusion Teams meet on a weekly basis, define, review, and align on priorities, define quarterly objectives, and collaboratively develop successful data solutions. Data Team staff allocation into Fusion Teams is defined in [Fusion Team Assignments](/handbook/business-technology/data-team/organization/#fusion-team-assignments).
+To support stable business workflows and longer-term initiatives, the Data Team has deployed three sub-teams, or **Data Fusion Teams**. A single Data Fusion Team includes members from Division leadership, Function Analysts, and the Data Team. Data Fusion Teams collaborate towards development of data solutions, including Dashboards, Data Models and ad-hoc analysis. Data Fusion Teams are staffed with the appropriate set of team members required to develop a full data solution. The Data Fusion Teams meet on a weekly basis, define, review, and align on priorities, define quarterly objectives, and collaboratively develop successful data solutions. Data Team staff allocation into Fusion Teams is defined in [Fusion Team Assignments](/handbook/business-technology/data-team/organization/#fusion-team-assignments).
 
 - The **Go-To-Market** Data Fusion Team focuses on the activities required to bring GitLab's products and services to the marketplace and measuring the business performance of these activities. The team meets on a weekly basis and covers topics defined in the [GTM Data Weekly Agenda](https://docs.google.com/document/d/1m-SygSyUqEcfd276_Jb1ZARMXIb4Z8clDF0eoxmudyw/edit#), while the team's priorities are defined in the [GTM Data Priorities](https://docs.google.com/spreadsheets/d/1EyjWw3-0iFt0oil95U15X8rFGj1aKrSYVYV1GMzWfq4/edit#gid=1029287785) sheet.
 
@@ -96,9 +96,11 @@ To support stable business workflows and longer-term initiatives, the Data Team 
 
 - The **General & Administrative** Data Fusion Team focuses on organization performance of GitLab teams, including People metrics. The team currently meets with Engineering Analytics on a bi-weekly basis as part of the [Engineering & Data Team Weekly Sync](https://docs.google.com/document/d/1ekImsdsldcYNnNhWkI0pTZldjgRoJDaq6odo2BgKhQM/edit?usp=sharing) and with the People Analytics Team in the [People Analytics <> Data Team Sync.](https://calendar.google.com/event?action=TEMPLATE&tmeid=NTc4aG9qdTZ0ZjN2ZWxrbWI0Z2hvbW4wNWxfMjAyMTA5MTNUMTYzMDAwWiBycGFya2VyQGdpdGxhYi5jb20&tmsrc=rparker%40gitlab.com&scp=ALL)
 
+The Analytics Engineering team also drives [Enterprise Data Program](/handbook/business-technology/data-team/organization/enterprise-data/) and supports the wider data community. The team focuses on inventorying, integrating, maintaining, and governing the data at an Enterprise level. This includes collaborating with the business units and data teams in establishing and facilitating commonly accepted guidelines around Enterprise data along with building [enterprise-wide data models](/handbook/business-technology/data-team/platform/edw/), supporting [Self-Service BI](/handbook/business-technology/data-team/direction/self-service/) and Analytical capabilities by providing Data Enablement and required training to the Users on Enterprise Data Models.
+
 ### The Data Platform Team
 
-The **[Data Platform Team](/handbook/business-technology/data-team/organization/engineering/)** is a critical team within the larger Data Team and focuses on development and operations of [data infrastructure](/handbook/business-technology/data-team/platform/). The Data Platform Team is both a development team and an operations/site reliability team. The team supports all Data Fusion Teams with **available, reliable, and scalable** data compute, processing, and storage. Platform components include the Data Warehouse, New Data Sources, Data Pumps, Data Security, and related new data technology. The Data Platform Team is composed of [Data Engineers](https://about.gitlab.com/job-families/finance/data-engineer/).
+The **[Data Platform Team](/handbook/business-technology/data-team/organization/engineering/)** is a critical team within the larger Data Team and focuses on development and operations of [data infrastructure](/handbook/business-technology/data-team/platform/). The Data Platform Team is both a development team and an operations/site reliability team. The team supports all Data Fusion Teams with **available, reliable, and scalable** data compute, processing, and storage. Platform components include the Data Warehouse, New Data Sources, Data Pumps, Data Security, and related new data technology. The Data Platform team also drives the [Data Management processes](https://about.gitlab.com/handbook/business-technology/data-team/data-management/). The Data Platform Team is composed of [Data Engineers](https://about.gitlab.com/job-families/finance/data-engineer/).
 
 ### The Data Science Team
 
@@ -106,17 +108,6 @@ The [Data Science Team](/handbook/business-technology/data-team/organization/dat
 - [Propensity to Expand](https://gitlab.com/gitlab-data/propensity-to-expand)
 - [Propensity to Churn/Contract](https://gitlab.com/gitlab-data/propensity-to-contract)
 - [Namespace Segmentation](https://gitlab.com/gitlab-data/namespace-segmentation)
-
-### The Data Collaboration Team
-
-The [Data Collaboration Team](/handbook/business-technology/data-team/organization/data-collaboration/) is a brand new team within the Data Team. Its primary focus is on enabling people across the company work better together using data. This includes finding the right tools that combine self-service capabilities with strong data governance and sharing capabilities, and adding content to the handbook to let people across the company find the right data assets they need for their roles. The first projects lined up for the Data Collaboration Team in FY23 focus on Business Intelligence, Product Analytics, and Data Findability. 
-- [New BI Platform Deployment](https://gitlab.com/groups/gitlab-data/-/epics/594)
-- [Rollout Product Analytics Tool to Growth](https://gitlab.com/groups/gitlab-data/-/epics/514)
-- [Data Hub](https://gitlab.com/gitlab-data/functional-analytics-center-of-excellence/-/issues/2)
-
-### The Enterprise Data Team
-
-The [Enterprise Data Team](/handbook/business-technology/data-team/organization/enterprise-data/) is a new team within the Data Team that would act as a   **_Center of Excellence_** for all of the [Data Management processes](https://about.gitlab.com/handbook/business-technology/data-team/data-management/). Its primary focus would be around inventorying, integrating, maintaining, and governing the data at an Enterprise level. This includes collaborating with the business units and data teams in establishing and facilitating commonly accepted guidelines around Enterprise data along with building [enterprise-wide data models](/handbook/business-technology/data-team/platform/edw/), supporting [Self-Service BI](/handbook/business-technology/data-team/direction/self-service/) and Analytical capabilities by providing Data Enablement and required training to the Users on Enterprise Data Models.
 
 ### Data Job Families
 
